crates/tree-sitter-djot-custom/test/corpus/syntax.txt
===============================================================================
Paragraph: simple
===============================================================================
aaa

-------------------------------------------------------------------------------

(document
  (block
    (paragraph
      (paragraph_start)
      (inline
        (str))
      (paragraph_end))))

===============================================================================
Paragraph: multiple paragraphs
===============================================================================
aaa

bbb

-------------------------------------------------------------------------------

(document
  (block
    (paragraph
      (paragraph_start)
      (inline
        (str))
      (paragraph_end)))
  (block
    (blankline))
  (block
    (paragraph
      (paragraph_start)
      (inline
        (str))
      (paragraph_end))))

===============================================================================
Paragraph: multiple paragraphs with leading spaces
===============================================================================
   aaa
      bbb

-------------------------------------------------------------------------------

(document
  (block
    (paragraph
      (paragraph_start)
      (inline
        (str))
      (inline
        (softbreak))
      (inline
        (str))
      (paragraph_end))))
